# Practise

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/schemas/com.xaluoqone.practise.database.AppDatabase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compress.cpp
app/src/main/java/com/xaluoqone/practise/: App.kt  MainActivity.kt  ViewProperty.kt
app/src/main/java/com/xaluoqone/practise/biorhythm/: BiorhythmActivity.kt  BiorhythmView.kt
app/src/main/java/com/xaluoqone/practise/circle/: BiorhythmView.kt
app/src/main/java/com/xaluoqone/practise/compose/: ComposeActivity.kt
app/src/main/java/com/xaluoqone/practise/compress/: BitmapMemoryManagerActivity.kt  CompressActivity.kt  ImageCache.kt  NativeCompress.kt
app/src/main/java/com/xaluoqone/practise/data/: DataStore.kt  DataStoreActivity.kt  DataStoreViewModel.kt
app/src/main/java/com/xaluoqone/practise/database/: AppDatabase.kt  DatabaseActivity.kt
app/src/main/java/com/xaluoqone/practise/event/: EventActivity.kt  FlowEventBus.kt  FlowEventBus2.kt
app/src/main/java/com/xaluoqone/practise/ex/: ActivityEx.kt  ScreenEx.kt  WindowInsetsEx.kt
app/src/main/java/com/xaluoqone/practise/exo/: ExoPlayerActivity.kt
app/src/main/java/com/xaluoqone/practise/insets/: WindowInsetsActivity.kt
app/src/main/res/layout/: activity_biorhythm.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+27 files in other folders)
